--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,30 @@
-#SteveRogers, #SallyRogers{
-    width: 35%;
+#olaf {
+    width: 260px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#SteveRogers, #SallyRogers {
+    width: 360px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#about {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+body {
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Verdana;
+}
+
+h1, h2 {
+    text-align: center;
 }
