--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
     
 }
 
+#party {
+    width: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #SteveRogers, #SallyRogers {
     width: 360px;
     display: block;
@@ -20,7 +27,7 @@
     text-align: justify;
 }
 
-p{
+p {
     text-align: justify;
 }
 
@@ -34,6 +41,20 @@ body {
 }
 
 h1, h2 {
+    text-align: center;
+}
+
+form p {
+    text-align: center;
+}
+
+table {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#links p {
     text-align: center;
 }
 
